# ruba-mazzetto

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.MD  build.sh  options.cmake
docs/: annotated.html  annotated_dup.js  ansi-color_8h.html  ansi-color_8h.js  ansi-color_8h_source.html  array_8c.html  array_8c.js  array_8h.html  array_8h.js  array_8h_source.html  cards_8c.html  cards_8c.js  cards_8h.html  cards_8h_source.html  classes.html  dir_0ad255a918b7fba820a1ddafed6fa637.html  dir_0ad255a918b7fba820a1ddafed6fa637.js  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.js  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_1699be727a800b1d059c6f7f2b91d2ee.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_a00b633439466cbb1729245c7f66f564.html  dir_a00b633439466cbb1729245c7f66f564.js  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dafb25a37831a87d2e2e8b780f24e872.html  dir_dafb25a37831a87d2e2e8b780f24e872.js  dir_f307a46daed1218fee22380d1eacedba.html  dir_f307a46daed1218fee22380d1eacedba.js  dir_fc4c7f03e1a69a98c370fae55a743828.html  dir_fc4c7f03e1a69a98c370fae55a743828.js  files.html  (+138 more)
docs/html/: annotated.html  annotated_dup.js  (+88 more)
frontend/: __main__.py  launch.sh  requirements.txt
src/: main.c
(+174 files in other folders)
